--- a/package.json
+++ b/package.json
@@ -8,11 +8,25 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "buffer": "^6.0.3",
+    "deepl": "^1.0.13",
+    "docxtemplater": "^3.31.3",
+    "filereader": "^0.10.3",
+    "fs": "^0.0.1-security",
+    "google-translate-api-x": "^10.4.1",
+    "https": "^1.0.0",
+    "pizzip": "^3.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "stream": "^0.0.2",
+    "sweetalert2": "^11.4.37",
+    "sweetalert2-react-content": "^5.0.3",
+    "translate-google-api": "^1.0.4",
+    "util": "^0.12.4",
+    "web-vitals": "^2.1.4",
+    "word-extractor": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "fs": false
   }
 }
